small gh pages changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aleksdoesit.github.io/Bingr//",
+  "homepage": "https://aleksdoesit.github.io/",
   "name": "bingr",
   "version": "0.1.0",
   "private": true,
